--- a/app/src/main/res/layout/fragment_nft.xml
+++ b/app/src/main/res/layout/fragment_nft.xml
@@ -14,9 +14,35 @@
 	<androidx.appcompat.widget.LinearLayoutCompat
 		android:layout_width="match_parent"
 		android:layout_height="match_parent"
-		android:background="@color/black"
+		android:background="@color/bg"
 		android:clickable="true"
 		android:orientation="vertical">
+
+		<androidx.appcompat.widget.LinearLayoutCompat
+			android:layout_width="match_parent"
+			android:layout_height="56dp"
+			android:orientation="horizontal">
+
+			<ImageView
+				android:id="@+id/btnBack"
+				android:layout_width="40dp"
+				android:layout_height="40dp"
+				android:layout_margin="8dp"
+				android:src="@drawable/ic_back"
+				app:layout_constraintBottom_toBottomOf="parent"
+				app:layout_constraintStart_toStartOf="parent"
+				app:layout_constraintTop_toTopOf="parent" />
+
+			<androidx.appcompat.widget.AppCompatTextView
+				android:id="@+id/tv_flow_account"
+				style="@style/bold16"
+				android:layout_height="match_parent"
+				android:layout_gravity="center"
+				android:text="탄소 캠페인 List"
+				app:layout_constraintBottom_toBottomOf="parent"
+				app:layout_constraintStart_toStartOf="parent" />
+
+		</androidx.appcompat.widget.LinearLayoutCompat>
 
 		<androidx.recyclerview.widget.RecyclerView
 			android:id="@+id/nftsRecyclerView"
