--- a/app/src/main/res/layout/fragment_nft_details.xml
+++ b/app/src/main/res/layout/fragment_nft_details.xml
@@ -17,46 +17,63 @@
 		android:layout_height="match_parent"
 		android:fillViewport="true">
 
-		<androidx.constraintlayout.widget.ConstraintLayout
+		<androidx.appcompat.widget.LinearLayoutCompat
 			android:layout_width="match_parent"
 			android:layout_height="wrap_content"
-			android:background="@color/gray200"
+			android:background="@color/bg"
 			android:orientation="vertical"
 			tools:context=".feature.nft.NftDetailsActivity">
 
-			<FrameLayout
-				android:id="@+id/iv_nft"
+			<androidx.appcompat.widget.LinearLayoutCompat
 				android:layout_width="match_parent"
-				android:layout_height="wrap_content"
-				android:orientation="vertical"
-				app:layout_constraintEnd_toEndOf="parent"
-				app:layout_constraintStart_toStartOf="parent"
-				app:layout_constraintTop_toTopOf="parent">
-
-				<ImageView
-					android:id="@+id/nftImage"
-					imageUrl="@{viewModel.detailNFT.image}"
-					android:layout_width="match_parent"
-					android:layout_height="400dp"
-					android:background="@color/gray200"
-					android:scaleType="centerCrop" />
+				android:layout_height="56dp"
+				android:orientation="horizontal">
 
 				<ImageView
 					android:id="@+id/btnBack"
 					android:layout_width="40dp"
 					android:layout_height="40dp"
 					android:layout_margin="8dp"
-					android:src="@drawable/ic_back" />
-			</FrameLayout>
+					android:src="@drawable/ic_back"
+					app:layout_constraintBottom_toBottomOf="parent"
+					app:layout_constraintStart_toStartOf="parent"
+					app:layout_constraintTop_toTopOf="parent" />
 
+
+				<androidx.appcompat.widget.AppCompatTextView
+					android:id="@+id/tv_flow_account"
+					style="@style/bold16"
+					android:layout_height="match_parent"
+					android:layout_gravity="center"
+					android:text="탄소 캠페인 상세보기"
+					app:layout_constraintBottom_toBottomOf="parent"
+					app:layout_constraintStart_toStartOf="parent" />
+
+			</androidx.appcompat.widget.LinearLayoutCompat>
+
+			<LinearLayout
+				android:id="@+id/gridImg"
+				android:layout_width="match_parent"
+				android:layout_height="400dp"
+				android:layout_margin="24dp"
+				android:padding="1dp"
+				android:scaleType="centerCrop">
+
+				<com.looktab.echonupy.customview.NftCardRoundImageView
+					android:id="@+id/nftImage"
+					imageUrl="@{viewModel.detailNFT.metadataJson.image}"
+					android:layout_width="match_parent"
+					android:layout_height="match_parent"
+					android:adjustViewBounds="true"
+					android:scaleType="centerCrop"
+					tools:srcCompat="@tools:sample/avatars" />
+			</LinearLayout>
 
 			<LinearLayout
 				android:layout_width="match_parent"
-				android:layout_height="0dp"
-				android:layout_marginTop="330dp"
+				android:layout_height="wrap_content"
 				android:orientation="vertical"
 				android:paddingHorizontal="20dp"
-				android:paddingVertical="32dp"
 				app:layout_constraintBottom_toBottomOf="parent"
 				app:layout_constraintEnd_toEndOf="parent"
 				app:layout_constraintStart_toStartOf="parent"
@@ -64,28 +81,37 @@
 
 				<TextView
 					android:id="@+id/nftName"
+					style="@style/bold22"
 					android:layout_width="wrap_content"
 					android:layout_height="wrap_content"
+					android:layout_marginTop="8dp"
 					android:text="@{viewModel.detailNFT.name}"
 					android:textColor="@color/white"
-					android:textSize="28dp"
-					android:textStyle="bold"
 					tools:text="Test" />
 
-
 				<TextView
+					style="@style/bold16"
 					android:layout_width="wrap_content"
 					android:layout_height="wrap_content"
 					android:layout_gravity="start"
 					android:layout_marginTop="12dp"
-					android:text="2022.03.23 - 2022.03.28"
-					android:textColor="@color/white"
+					android:text="NFT description"
+					android:textColor="@color/gray500"
 					android:textSize="16dp" />
 
+				<TextView
+					style="@style/medium16"
+					android:layout_width="wrap_content"
+					android:layout_height="wrap_content"
+					android:layout_marginTop="8dp"
+					android:gravity="start"
+					android:text="@{viewModel.detailNFT.metadataJson.description}"
+					android:textColor="@color/white"
+					tools:text="TestTestTestTestTestTestTestTestTestTestTestTestTestTestTestTestTest" />
 
 				<View
 					android:layout_width="match_parent"
-					android:layout_height="130dp" />
+					android:layout_height="80dp" />
 			</LinearLayout>
 
 			<androidx.appcompat.widget.LinearLayoutCompat
@@ -96,20 +122,21 @@
 				app:layout_constraintBottom_toBottomOf="parent">
 
 				<androidx.appcompat.widget.AppCompatTextView
-					android:id="@+id/btnPay"
+					android:id="@+id/btnComplete"
 					style="@style/Typography.SemiBold"
 					android:layout_width="wrap_content"
-					android:layout_height="match_parent"
+					android:layout_height="60dp"
+					android:layout_marginBottom="24dp"
 					android:layout_weight="1"
-					android:background="@drawable/box_r100_25"
+					android:background="@drawable/box_r12"
 					android:drawablePadding="6dp"
 					android:gravity="center"
 					android:paddingHorizontal="22dp"
-					android:text="참여하기"
-					android:textColor="@color/white"
+					android:text="캠페인 진행하기"
+					android:textColor="@color/black"
 					android:textSize="18dp" />
 			</androidx.appcompat.widget.LinearLayoutCompat>
 
-		</androidx.constraintlayout.widget.ConstraintLayout>
+		</androidx.appcompat.widget.LinearLayoutCompat>
 	</ScrollView>
 </layout>
