--- a/app/src/main/res/layout/fragment_phantom_login.xml
+++ b/app/src/main/res/layout/fragment_phantom_login.xml
@@ -1,35 +1,41 @@
-<?xml version="1.0" encoding="UTF-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
 	xmlns:app="http://schemas.android.com/apk/res-auto">
 
-	<LinearLayout
+	<data>
+
+	</data>
+
+	<androidx.constraintlayout.widget.ConstraintLayout
 		android:layout_width="match_parent"
 		android:layout_height="match_parent"
-		android:background="@color/gray300"
-		android:gravity="center"
-		android:orientation="vertical">
+		android:background="@drawable/bg">
 
-		<TextView
-			android:id="@+id/metaplexTextView"
-			android:layout_width="wrap_content"
-			android:layout_height="wrap_content"
-			android:layout_marginBottom="20dp"
-			android:drawablePadding="25dp"
-			android:text="@string/nupy"
-			android:textColor="@color/white"
-			android:textSize="38sp"
-			app:drawableStartCompat="@drawable/ic_solana" />
+		<ImageView
+			android:layout_width="match_parent"
+			android:layout_height="match_parent"
+			android:layout_marginHorizontal="10dp"
+			android:scaleType="fitStart"
+			android:src="@drawable/bg_img"
+			app:layout_constraintTop_toTopOf="parent" />
 
-		<Button
+		<androidx.appcompat.widget.AppCompatTextView
 			android:id="@+id/loginWithPhantomBtn"
-			android:layout_width="wrap_content"
-			android:layout_height="wrap_content"
-			android:backgroundTint="#01FFBC"
-			android:paddingHorizontal="30dp"
-			android:paddingVertical="15dp"
-			android:text="@string/login_with_phantom"
-			android:textAllCaps="false"
-			android:textColor="#000000"
-			android:textSize="16sp" />
-	</LinearLayout>
+			style="@style/Typography.Bold"
+			android:layout_width="match_parent"
+			android:layout_height="56dp"
+			android:layout_marginHorizontal="50dp"
+			android:layout_marginBottom="60dp"
+			android:background="@drawable/box_r16_400"
+			android:backgroundTint="@color/white"
+			android:gravity="center"
+			android:text="Wallet Login"
+			android:textColor="@color/black"
+			android:textSize="16dp"
+			app:layout_constraintBottom_toBottomOf="parent"
+			app:layout_constraintEnd_toEndOf="parent"
+			app:layout_constraintStart_toStartOf="parent" />
+
+	</androidx.constraintlayout.widget.ConstraintLayout>
+
 </layout>
