--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -5,4 +5,104 @@
 		<item name="android:layout_width">wrap_content</item>
 		<item name="android:layout_height">wrap_content</item>
 	</style>
+
+	<style name="bold24" parent="Widget.AppCompat.TextView">
+		<item name="android:layout_width">wrap_content</item>
+		<item name="android:layout_height">wrap_content</item>
+		<item name="android:gravity">center</item>
+		<item name="android:textSize">24dp</item>
+		<item name="android:textColor">@color/white</item>
+		<item name="android:textAppearance">@style/Typography.Bold</item>
+	</style>
+
+	<style name="bold22" parent="Widget.AppCompat.TextView">
+		<item name="android:layout_width">wrap_content</item>
+		<item name="android:layout_height">wrap_content</item>
+		<item name="android:gravity">center</item>
+		<item name="android:textSize">22dp</item>
+		<item name="android:textColor">@color/white</item>
+		<item name="android:textAppearance">@style/Typography.Bold</item>
+	</style>
+
+	<style name="bold20" parent="Widget.AppCompat.TextView">
+		<item name="android:layout_width">wrap_content</item>
+		<item name="android:layout_height">wrap_content</item>
+		<item name="android:gravity">center</item>
+		<item name="android:textSize">20dp</item>
+		<item name="android:textColor">@color/white</item>
+		<item name="android:textAppearance">@style/Typography.Bold</item>
+	</style>
+
+	<style name="bold18" parent="Widget.AppCompat.TextView">
+		<item name="android:layout_width">wrap_content</item>
+		<item name="android:layout_height">wrap_content</item>
+		<item name="android:gravity">center</item>
+		<item name="android:textSize">18dp</item>
+		<item name="android:textColor">@color/white</item>
+		<item name="android:textAppearance">@style/Typography.Bold</item>
+	</style>
+
+	<style name="bold16" parent="Widget.AppCompat.TextView">
+		<item name="android:layout_width">wrap_content</item>
+		<item name="android:layout_height">wrap_content</item>
+		<item name="android:gravity">center</item>
+		<item name="android:textSize">16dp</item>
+		<item name="android:textColor">@color/white</item>
+		<item name="android:textAppearance">@style/Typography.Bold</item>
+	</style>
+
+	<style name="medium22" parent="Widget.AppCompat.TextView">
+		<item name="android:layout_width">wrap_content</item>
+		<item name="android:layout_height">wrap_content</item>
+		<item name="android:gravity">center</item>
+		<item name="android:textSize">22dp</item>
+		<item name="android:textColor">@color/white</item>
+		<item name="android:textAppearance">@style/Typography.Medium</item>
+	</style>
+
+	<style name="medium16" parent="Widget.AppCompat.TextView">
+		<item name="android:layout_width">wrap_content</item>
+		<item name="android:layout_height">wrap_content</item>
+		<item name="android:gravity">center</item>
+		<item name="android:textSize">16dp</item>
+		<item name="android:textColor">@color/white</item>
+		<item name="android:textAppearance">@style/Typography.Medium</item>
+	</style>
+
+	<style name="medium14" parent="Widget.AppCompat.TextView">
+		<item name="android:layout_width">wrap_content</item>
+		<item name="android:layout_height">wrap_content</item>
+		<item name="android:gravity">center</item>
+		<item name="android:textSize">14dp</item>
+		<item name="android:textColor">@color/white</item>
+		<item name="android:textAppearance">@style/Typography.Medium</item>
+	</style>
+
+	<style name="medium12" parent="Widget.AppCompat.TextView">
+		<item name="android:layout_width">wrap_content</item>
+		<item name="android:layout_height">wrap_content</item>
+		<item name="android:gravity">center</item>
+		<item name="android:textSize">12dp</item>
+		<item name="android:textColor">@color/white</item>
+		<item name="android:textAppearance">@style/Typography.Medium</item>
+	</style>
+
+	<style name="regular14" parent="Widget.AppCompat.TextView">
+		<item name="android:layout_width">wrap_content</item>
+		<item name="android:layout_height">wrap_content</item>
+		<item name="android:gravity">center</item>
+		<item name="android:textSize">14dp</item>
+		<item name="android:textColor">@color/white</item>
+		<item name="android:textAppearance">@style/Typography.Regular</item>
+	</style>
+
+	<style name="regular12" parent="Widget.AppCompat.TextView">
+		<item name="android:layout_width">wrap_content</item>
+		<item name="android:layout_height">wrap_content</item>
+		<item name="android:gravity">center</item>
+		<item name="android:textSize">12dp</item>
+		<item name="android:textColor">@color/white</item>
+		<item name="android:textAppearance">@style/Typography.Regular</item>
+	</style>
+
 </resources>
