--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,20 +15,100 @@
 	<androidx.constraintlayout.widget.ConstraintLayout
 		android:layout_width="match_parent"
 		android:layout_height="match_parent"
-		android:background="@color/black"
+		android:background="@color/gray900"
 		android:fitsSystemWindows="true"
 		android:orientation="vertical">
+
+		<androidx.constraintlayout.widget.ConstraintLayout
+			android:id="@+id/header"
+			android:layout_width="match_parent"
+			android:layout_height="64dp"
+			android:paddingHorizontal="12dp"
+			app:layout_constraintTop_toTopOf="parent">
+
+			<androidx.appcompat.widget.AppCompatImageView
+				android:layout_width="66dp"
+				android:layout_height="wrap_content"
+				android:src="@drawable/logo"
+				app:layout_constraintBottom_toBottomOf="parent"
+				app:layout_constraintStart_toStartOf="parent"
+				app:layout_constraintTop_toTopOf="parent" />
+
+			<androidx.appcompat.widget.AppCompatTextView
+				android:id="@+id/btn_nft_list"
+				style="@style/medium14"
+				android:layout_width="wrap_content"
+				android:background="@drawable/box_r100_black"
+				android:drawableRight="@drawable/ic_nft"
+				android:drawablePadding="4dp"
+				android:gravity="center"
+				android:paddingHorizontal="8dp"
+				android:paddingVertical="4dp"
+				android:text="Plant"
+				android:textColor="@color/white"
+				android:textSize="12dp"
+				app:layout_constraintBottom_toBottomOf="parent"
+				app:layout_constraintEnd_toEndOf="parent"
+				app:layout_constraintTop_toTopOf="parent" />
+		</androidx.constraintlayout.widget.ConstraintLayout>
+
+		<androidx.constraintlayout.widget.ConstraintLayout
+			android:id="@+id/wallet"
+			android:layout_width="0dp"
+			android:layout_height="132dp"
+			android:layout_marginHorizontal="24dp"
+			android:background="@drawable/box_r16_black"
+			android:backgroundTint="@color/white"
+			android:padding="20dp"
+			app:layout_constraintEnd_toEndOf="parent"
+			app:layout_constraintStart_toStartOf="parent"
+			app:layout_constraintTop_toBottomOf="@id/header">
+
+			<androidx.appcompat.widget.AppCompatTextView
+				android:id="@+id/tv_total"
+				style="@style/bold24"
+				android:layout_height="36dp"
+				android:text="Total CO2 1200"
+				android:textColor="@color/black"
+				app:layout_constraintBottom_toBottomOf="parent"
+				app:layout_constraintStart_toStartOf="parent" />
+
+			<androidx.appcompat.widget.AppCompatTextView
+				android:id="@+id/tv_today"
+				style="@style/medium14"
+				android:text="오늘 모은 탄소배출량 .. 0 CO2"
+				android:textColor="@color/gray800"
+				app:layout_constraintStart_toStartOf="parent"
+				app:layout_constraintTop_toTopOf="parent" />
+		</androidx.constraintlayout.widget.ConstraintLayout>
+
 
 		<FrameLayout
 			android:id="@+id/fragment_container"
 			android:layout_width="match_parent"
 			android:layout_height="0dp"
+			android:layout_marginTop="16dp"
 			app:layout_constraintBottom_toBottomOf="parent"
-			app:layout_constraintTop_toTopOf="parent" />
+			app:layout_constraintTop_toBottomOf="@id/wallet" />
+
+		<androidx.appcompat.widget.AppCompatTextView
+			android:id="@+id/btn_join_campaign"
+			style="@style/bold16"
+			android:layout_width="0dp"
+			android:layout_height="56dp"
+			android:layout_margin="24dp"
+			android:background="@drawable/box_r12"
+			android:backgroundTint="@color/brand500"
+			android:text="new campaign"
+			app:layout_constraintBottom_toBottomOf="parent"
+			app:layout_constraintEnd_toEndOf="parent"
+			app:layout_constraintStart_toStartOf="parent" />
+
 
 		<FrameLayout
 			android:id="@+id/out_fragment_container"
 			android:layout_width="match_parent"
 			android:layout_height="match_parent" />
+
 	</androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
